fixed dropdown overflow for modules and instructors

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -63,6 +63,16 @@ section {
   display: block;
 }
 
+#instructor-dropdown-menu {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+#module-dropdown-menu {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
